--- a/app/src/main/res/layout/favorite_tracks_fragment.xml
+++ b/app/src/main/res/layout/favorite_tracks_fragment.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/emptyLibraryPH"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone">
 
     <ImageView
         style="@style/SearchActivityNothingFoundImagePH"
-        android:id="@+id/emptyLibraryPH"
+        android:id="@+id/emptyLibraryImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_104"
@@ -20,8 +29,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_16"
         android:text="@string/library_is_empty"
-        app:layout_constraintTop_toBottomOf="@id/emptyLibraryPH"
+        app:layout_constraintTop_toBottomOf="@id/emptyLibraryImg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
