--- a/app/src/main/res/layout/playlists_fragment.xml
+++ b/app/src/main/res/layout/playlists_fragment.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/emptyPlayListsPH"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:visibility="gone">
 
     <com.google.android.material.button.MaterialButton
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -20,7 +28,7 @@
 
     <ImageView
         style="@style/SearchActivityNothingFoundImagePH"
-        android:id="@+id/emptyPlaylistPH"
+        android:id="@+id/emptyPlaylistImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_46"
@@ -35,8 +43,9 @@
         android:layout_marginTop="@dimen/padding_16"
         android:text="@string/playlists_are_empty"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/emptyPlaylistPH"
-        app:layout_constraintStart_toStartOf="@id/emptyPlaylistPH"
-        app:layout_constraintEnd_toEndOf="@id/emptyPlaylistPH"/>
+        app:layout_constraintTop_toBottomOf="@id/emptyPlaylistImg"
+        app:layout_constraintStart_toStartOf="@id/emptyPlaylistImg"
+        app:layout_constraintEnd_toEndOf="@id/emptyPlaylistImg"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
